[tool.poetry]
name = "repl_python3_beta_Swiper-Bot-v3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"
youtube-search = "^2.1.0"
validators = "^0.18.2"
PyNaCl = "^1.4.0"
google-api-python-client = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
